lab4 done with docs
