# cmd/web/main.go
@@ -70,18 +70,6 @@ func main() {
 	application.RunApp()
 }
 
-type pingReq struct{}
-type pingResp struct {
-	Status string `json:"status"`
-}
-
-// Ping godoc
-// @Summary      Show hello text
-// @Description  very very friendly response
-// @Tags         Tests
-// @Produce      json
-// @Success      200  {object}  pingResp
-// @Router       /ping/{name} [get]
 func Ping(gCtx *gin.Context) {
 	name := gCtx.Param("name")
 	gCtx.String(http.StatusOK, "Hello %s", name)
