# docs/swagger.json
@@ -90,7 +90,7 @@
             }
         },
         "/forecast/edit/{id}": {
-            "post": {
+            "put": {
                 "description": "very very friendly response",
                 "consumes": [
                     "application/json"
@@ -264,28 +264,8 @@
                 }
             }
         },
-        "/ping/{name}": {
-            "get": {
-                "description": "very very friendly response",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Tests"
-                ],
-                "summary": "Show hello text",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.pingResp"
-                        }
-                    }
-                }
-            }
-        },
         "/pr_fc/edit/{prediction_id}/{forecast_id}": {
-            "delete": {
+            "put": {
                 "description": "An error is returned in cases of unauthorized actions being attempted",
                 "produces": [
                     "application/json"
@@ -979,6 +959,9 @@
         "handler.loginReq": {
             "type": "object",
             "properties": {
+                "guest": {
+                    "type": "boolean"
+                },
                 "login": {
                     "type": "string"
                 },
@@ -1044,14 +1027,6 @@
                     "$ref": "#/definitions/ds.Role"
                 },
                 "uid": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.pingResp": {
-            "type": "object",
-            "properties": {
-                "status": {
                     "type": "string"
                 }
             }
